# Parallel-iot-dashboard

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
IoT-data-simulator/: .gitignore  docker-compose.yml
broker&db/: docker-compose.yml  sensor_data.csv  session_export.txt
broker&db/mosquitto/config/: mosquitto.conf
dashboard/: app.py
data_processor/: processor.cpp
iot_simulator/: CMakeCache.txt  Makefile  connectdb.cpp  connectdb.hpp  main.cpp  mqtt_processor  mqtt_subscriber  prll_app
parellel_parser/: CMakeCache.txt  Makefile  cmake_install.cmake  concurrent_queue.hpp  main.cpp  mqtt_subscriber  prll_app  thread_pool.hpp
